# https---github.com-Yassir-Chakour-Automating-Teacher-Grade-Entry

./: .env.dinst  .gitignore  pyproject.toml
src/: api.py  graph.py  main.py  state.py
src/nodes/: database.py  processor.py  sheets.py
src/utils/: google_client.py
