[tool.poetry]
name = "ismagi-agent"
version = "0.1.0"
description = ""
authors = ["Yassir-Chakour <yassir@shinobiautomation.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langgraph = "^1.1.8"
supabase = "^2.28.3"
gspread = "^6.2.1"
dotenv = "^0.9.9"
python-dotenv = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
